2010-05-25  Chong Yidong  <cyd@stupidchicken.com>

	* log-edit.el (log-edit-strip-single-file-name): Default to nil.
	(log-edit-changelog-entries): Doc fix.
	(log-edit-changelog-insert-entries): Args changed.  Rename
	relative filenames in ChangeLog entries.  Delete tabs.
	(log-edit-insert-changelog-entries): Reorganize return value of
	`log-edit-changelog-entries' to pass filenames to
	log-edit-changelog-insert-entries.

2010-05-25  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* dired.el (dired-mode-map): Rebind "\C-t\C-t" from
	`image-dired-dired-insert-marked-thumbs' to
	`image-dired-dired-toggle-marked-thumbs'.

	* image-dired.el: Require cl when compiling.
	(image-dired-dired-toggle-marked-thumbs): Rename from
	`image-dired-dired-insert-marked-thumbs'.  Add ARG.  Doc fix.
	Use interactive spec "P".  Set LOCALP arg of `dired-get-filename'
	to 'no-dir.  Skip files whose names don't match
	`image-file-name-regexp'.  When file has a thumbnail overlay,
	delete it.  (Bug#5270)

2010-05-25  Juri Linkov  <juri@jurta.org>

	* image-mode.el (image-mode): Add image-after-revert-hook to
	after-revert-hook.
	(image-after-revert-hook): New function.  (Bug#5669)

2010-05-25  Juri Linkov  <juri@jurta.org>

	* image.el (image-animated-p): When delay between animated images
	is 0, set it to 10 (0.1 sec).  (Bug#6258)

2010-05-25  Christian Lynbech  <christian.lynbech@tieto.com>  (tiny change)

	* net/tramp.el (tramp-handle-insert-directory): Don't use
	`forward-word', its default syntax could be changed.

2010-05-25  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-progress-reporter-update): New defun.
	(with-progress-reporter): Use it.
	(tramp-process-actions):
	* net/tramp-gvfs.el (tramp-gvfs-handler-askquestion): Preserve
	current message, in order to let progress reporter continue
	afterwards.  (Bug#6257)

2010-05-25  Glenn Morris  <rgm@gnu.org>

	* net/rcirc.el (rcirc-default-user-name, rcirc-default-full-name):
	Add :version.
